# Food_Rescue

./: README.md  admin.py  app.py  auth.py  create_db.py  donations.py  forms.py  models.py  pyproject.toml  replit.md  requirement.txt  requirements.txt  run.sh
static/css/: custom.css
templates/: base.html  index.html
templates/admin/: donations.html  stats.html  users.html
templates/auth/: login.html  register.html
templates/dashboard/: admin.html  ngo.html  restaurant.html
templates/donations/: create.html  detail.html  list.html
